# apertium-srd

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-srd.pc.in  apertium-srd.post-srd.dix  apertium-srd.srd.dix  apertium-srd.srd.rlx  configure.ac  modes.xml  printzipeddu.txt  test_verbs.bash
corpus/: comprovar_disam.pl  srd.crp.morf.200.txt  srd.crp.morf.200.txt.170813  srd.crp.morf.300.txt  srd.crp.morf.400.txt  srd.crp.morf.500.txt  srd.crp.morf.disam.200.txt  srd.crp.morf.disam.200.txt.170804  srd.crp.morf.disam.200.txt.170813  srd.crp.morf.disam.300.txt  srd.crp.morf.disam.400.txt  srd.crp.morf.disam.500.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: contu01.txt  contu02.txt  contu03.txt  contu04.txt  contu05.txt  cuento.vislcg.txt
texts/puupankki/: puupankki.srd.conllu
